fixed blur hero not visible in firefox

--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -66,12 +66,20 @@ nav.navbar {
   background-blend-mode: color-burn;
 }
 
+
 .blur-hero {
   padding: 2rem !important;
-  margin-top: 5rem !important;
-  backdrop-filter: blur(6px) brightness(0.8); // invert(0.7);
-  // width: 50%;
+  margin-top: 3rem !important;
+  background-color: rgba(0,0,0,.35);
   border-radius: 20px;
+}
+
+@supports ((-webkit-backdrop-filter: blur(2em)) or (backdrop-filter: blur(2em))) {
+.blur-hero {
+  backdrop-filter: blur(6px); //brightness(0.8); // invert(0.7);
+  // backdrop-filter: blur(6px) brightness(0.8); // invert(0.7);
+  // width: 50%;
+}
 }
 
 // Import only what you need from Bulma
